--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <section class="main-section">
+
+        <header>
+            <h1> Meet Our Team </h1>
+        </header>
+
+        <main>
+
+        </main>
+
+    </section>
 </body>
 </html>
