REfixed text in the div

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
 
         <main>
-           <p >
+           <p class="text-top">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ab perferendis? Minima incidunt vel deserunt excepturi ipsa nam asperiores
            </p>
 
